<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PjtSms</string>
    <string name="action_settings">Settings</string>
    <string name="edit"> 编辑 </string>
    <string name="message">短信</string>
    <string name="create"> 新建 </string>
    <string name="name">name</string>
    <string name="time">time</string>
    <string name="back">&lt;返回</string>
    <string name="call">呼叫</string>
    <string name="contact">联系人</string>
    <string name="send">发送</string>
    <string name="new_message">新短信</string>
    <string name="plus">+</string>
    <string name="recent_call">最近通话</string>
    <string name="count">count</string>
    <string name="body">body</string>

</resources>