<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/qcbContact"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/llMessage"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/llTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="5dp"
                android:gravity="center"
                android:text="@string/time"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#C00000FF" />

            <TextView
                android:id="@+id/tvCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="2dip"
                android:layout_toRightOf="@+id/tvName"
                android:text="@string/count"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="3dp"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="9pt" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvBody"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="3dp"
            android:text="@string/body"
            android:textColor="#80000000"
            android:textSize="8pt" />
    </LinearLayout>

</LinearLayout>